tests/reference/asr-matrix_matmul_01-a0e2017.stderr
semantic error: matmul accepts first matrix of type Integer, Real, Complex or Logical.
 --> tests/errors/matrix_matmul_01.f90:5:21
  |
5 |     print *, matmul(a, b)
  |                     ^ 
